--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ document.addEventListener('DOMContentLoaded', () => {
         <h2 style="margin-top:0" data-i18n="contacts_title">Контакти</h2>
         <p style="color:var(--muted)" data-i18n="contacts_text">Маєш питання, хочеш допомогти або запропонувати співпрацю? Пиши нам у Telegram або підписуйся на YouTube.</p>
         <div class="cta">
-          <a class="btn primary" href="https://t.me/LittleBitUA" target="_blank" rel="noopener">Telegram</a>
+          <a class="btn primary" href="https://t.me/LittleBitUA" target="_blank" rel="noopener">Telegram</a> <a href="https://www.tiktok.com/@littlebit_ua" target="_blank" rel="noopener"><i class="fa-brands fa-tiktok" aria-label="TikTok"></i></a> <a href="https://x.com/LittleBitUA" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter" aria-label="X (Twitter)"></i></a>
           <a class="btn primary youtube-primary" href="https://www.youtube.com/@UA_LittleBit" target="_blank" rel="noopener">YouTube</a>
         </div>
       </div>
