--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@ document.addEventListener('DOMContentLoaded', () => {
         <p style="color:var(--muted)" data-i18n="benefactors_desc">Це — список усіх людей, які коли-небудь підтримали діяльність нашої спілки, ми щиро їм вдячні:</p>
         <div class="chips" aria-label="Список доброчинців">
           <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#fbbf24;background:rgba(251,191,36,.15)">👑 <strong>VADKO</strong></span>
+		  <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#fbbf24;background:rgba(251,191,36,.15)">👑 <strong>Krov</strong></span>
           <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#34d399;background:rgba(52,211,153,.15)">👑 <strong>Хоук</strong></span>
 		  <span aria-disabled="true" tabindex="-1" class="chip" style="border-color:#34d399;background:rgba(52,211,153,.15)">🦩 <strong>Hlamingo</strong></span>
           <span aria-disabled="true" tabindex="-1" class="chip">BreadHood</span>
@@ -527,6 +528,11 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">Dima Feyleg</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Дмитро</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">офіцерППО</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Ігор</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Артем</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Ton</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Ярослав</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">BlackWolf94</span>
 		  
         </div>
       </div>
