--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Little Bit — Українські локалізації</title>
+    <title>«Little Bit» — Українські локалізації</title>
     <link rel="icon" type="image/x-icon" href="logo.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
 
     <header class="glass-header">
         <div class="container nav-container">
-            <div class="brand">Little Bit</div>
+            <div class="brand">«Little Bit»</div>
             <nav class="nav-links">
                 <a href="#projects" data-i18n="nav_projects">Проєкти</a>
                 <a href="#support" data-i18n="nav_support">Підтримка</a>
