--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 </div>
                 <div id="m-stats" class="stats-box"></div>
                 <p id="m-desc" style="color:#cbd5e1; line-height:1.6; margin-bottom:20px"></p>
-                <div id="m-video" style="border-radius:10px; overflow:hidden; margin-bottom:20px"></div>
+                <div id="m-video"></div>
                 <div id="m-actions" style="display:flex; gap:10px"></div>
             </div>
         </div>
