--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css?v=1.1.4">
+
+    <!-- Preload першого слайда новин для швидкого завантаження -->
+    <link rel="preload" as="image" href="assets/Uncharted1_news.webp">
+
+    <link rel="stylesheet" href="style.css?v=1.1.6">
 </head>
 <body>
 
@@ -304,8 +308,8 @@
         </div>
     </div>
 
-    <script src="data.js?v=1.1.4"></script>
-    <script src="news-data.js?v=1.1.4"></script>
-    <script src="script.js?v=1.1.4"></script>
+    <script src="data.js?v=1.1.6"></script>
+    <script src="news-data.js?v=1.1.6"></script>
+    <script src="script.js?v=1.1.6"></script>
 </body>
 </html>
