--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet">
 
     <!-- Preload першого слайда новин для швидкого завантаження -->
-    <link rel="preload" as="image" href="assets/Uncharted1_news.webp?v=1.4.0">
+    <link rel="preload" as="image" href="assets/Uncharted1_news.webp?v=1.4.1">
 
-    <link rel="stylesheet" href="style.css?v=1.4.0">
+    <link rel="stylesheet" href="style.css?v=1.4.1">
 </head>
 <body>
 
@@ -129,6 +129,7 @@
 
                 <div class="contacts-grid">
                     <a href="https://t.me/LittleBitUA" target="_blank" class="contact-card contact-telegram">
+                        <div class="contact-bg"></div>
                         <div class="contact-gradient"></div>
                         <div class="contact-content">
                             <div class="contact-icon">
@@ -152,6 +153,7 @@
                     </a>
 
                     <a href="https://www.youtube.com/@UA_LittleBit/" target="_blank" class="contact-card contact-youtube">
+                        <div class="contact-bg"></div>
                         <div class="contact-gradient"></div>
                         <div class="contact-content">
                             <div class="contact-icon">
@@ -175,6 +177,7 @@
                     </a>
 
                     <a href="https://www.tiktok.com/@littlebit_ua" target="_blank" class="contact-card contact-tiktok">
+                        <div class="contact-bg"></div>
                         <div class="contact-gradient"></div>
                         <div class="contact-content">
                             <div class="contact-icon">
@@ -198,6 +201,7 @@
                     </a>
 
                     <a href="https://x.com/LittleBitUA" target="_blank" class="contact-card contact-twitter">
+                        <div class="contact-bg"></div>
                         <div class="contact-gradient"></div>
                         <div class="contact-content">
                             <div class="contact-icon">
@@ -232,6 +236,7 @@
 
                 <div class="support-card-wrapper">
                     <a href="https://donatello.to/LittleBitUA" target="_blank" class="support-donate-card">
+                        <div class="donate-bg"></div>
                         <div class="donate-gradient"></div>
                         <div class="donate-content">
                             <div class="donate-icon">
@@ -255,6 +260,7 @@
                     </a>
 
                     <a href="https://send.monobank.ua/jar/3h4akVJRXK" target="_blank" class="support-donate-card">
+                        <div class="donate-bg"></div>
                         <div class="donate-gradient"></div>
                         <div class="donate-content">
                             <div class="donate-icon">
@@ -302,8 +308,8 @@
         </div>
     </div>
 
-    <script src="data.js?v=1.4.0"></script>
-    <script src="news-data.js?v=1.4.0"></script>
-    <script src="script.js?v=1.4.0"></script>
+    <script src="data.js?v=1.4.1"></script>
+    <script src="news-data.js?v=1.4.1"></script>
+    <script src="script.js?v=1.4.1"></script>
 </body>
 </html>
